2004-05-22  Matthew Mueller  <donut@dakotacom.net>

	* arch/ogl/ogl.c: allow for texture dimensions of 1, and fix ogl
	replacement texture paletted->rgb conversion alpha problem (d1x
	r1.43)

	* arch/ogl/ogl.c, include/pngfile.h, main/piggy.c, main/piggy.h,
	misc/Makefile.am, misc/pngfile.c: add opengl replacement texture
	support (requires libpng and zlib) (d1x r1.42, r1.1, r1.10, r1.4,
	r1.1)

	* arch/ogl/gr.c, include/loadgl.h: fix win32
	GL_NV_register_combiners build stuff (d1x r1.39, r1.7)

	* arch/ogl/gr.c, arch/ogl/ogl.c, include/loadgl.h,
	include/ogl_init.h, main/render.c: opengl hardware
	super-transparency support using GL_NV_register_combiners (d1x
	r1.38, r1.41, r1.6, r1.26, r1.7)

2004-05-22  Bradley Bell  <btb@icculus.org>

	* arch/ogl/internal.h, include/gr.h, include/ogl_init.h: function
	prototypes

2004-05-22  Matthew Mueller  <donut@dakotacom.net>

	* 2d/font.c, arch/ogl/gr.c, arch/ogl/internal.h, arch/ogl/ogl.c,
	include/ogl_init.h: use GL_RGB for non-transparent textures, and
	fix fonts not having transparent flag set (wouldn't get paletted)
	(d1x r1.15, r1.37, r1.40, r1.25)

	* arch/ogl/ogl.c: don't try to use paletted textures with
	mipmapping since gluBuild2DMipmaps can't handle it (d1x r1.39)

	* arch/ogl/gr.c, arch/ogl/ogl.c, include/loadgl.h,
	include/ogl_init.h: add ogl paletted texture support (d1x r1.36,
	r1.38, r1.5, r1.24)

	* 2d/font.c: memset ogl font bitmap data since the copy function
	leaves some (unused) parts uninitialized, which aggravates
	valgrind (d1x r1.14)

	* arch/win32/joyhh.c: fix phantom hat when used with a joystick
	without one, since the code ignored the JOYCAPS_HASPOV flag (d1x
	r1.5)

	* arch/ogl/gr.c: fix possibility of saving incomplete .tga
	screenshots if the entire thing wasn't written in one call to
	write() (d1x r1.35)

	* arch/win32/digi.c: fix persistent sounds (fans, etc) volume/pan
	info not being updated on win32 (d1x r1.11)

	* arch/win32/digi.c: remove some redundancy by not needing to do